[tool.poetry]
name = "puzzle-generator"
version = "0.1.0"
description = "Generates puzzle configurations with multiple solutions"
authors = ["Tommy S Heng <tommy.seng.heng@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
